# name: test_doc_needextend_dynamic[test_app0]
  dict({
    'current_version': '',
    'project': 'Python',
    'versions': dict({
      '': dict({
        'filters': dict({
        }),
        'filters_amount': 0,
        'needs': dict({
          'REQ_1': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': '',
            'constraints': list([
            ]),
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'created_at': '',
            'delete': None,
            'description': '',
            'docname': 'index',
            'doctype': '.rst',
            'duration': '',
            'external_css': 'external_link',
            'external_url': None,
            'full_title': 'Requirement 1',
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'REQ_1',
            'id_prefix': '',
            'is_external': False,
            'is_modified': True,
            'is_need': True,
            'is_part': False,
            'jinja_content': None,
            'layout': '',
            'links': list([
              'REQ_A_1',
              'REQ_D_1',
              'REQ_B_1',
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 2,
            'params': '',
            'parent_need': '',
            'parent_needs': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'needextend dynamic functions',
            'sections': list([
              'needextend dynamic functions',
            ]),
            'service': '',
            'signature': '',
            'specific': '',
            'status': None,
            'style': None,
            'tags': list([
            ]),
            'target_id': 'REQ_1',
            'template': None,
            'title': 'Requirement 1',
            'type': 'req',
            'type_name': 'Requirement',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
          'REQ_A_1': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': '',
            'constraints': list([
            ]),
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'created_at': '',
            'delete': None,
            'description': '',
            'docname': 'index',
            'doctype': '.rst',
            'duration': '',
            'external_css': 'external_link',
            'external_url': None,
            'full_title': 'Requirement A 1',
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'REQ_A_1',
            'id_prefix': '',
            'is_external': False,
            'is_modified': False,
            'is_need': True,
            'is_part': False,
            'jinja_content': None,
            'layout': '',
            'links': list([
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 0,
            'params': '',
            'parent_need': '',
            'parent_needs': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'needextend dynamic functions',
            'sections': list([
              'needextend dynamic functions',
            ]),
            'service': '',
            'signature': '',
            'specific': '',
            'status': None,
            'style': None,
            'tags': list([
            ]),
            'target_id': 'REQ_A_1',
            'template': None,
            'title': 'Requirement A 1',
            'type': 'req',
            'type_name': 'Requirement',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
          'REQ_B_1': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': '',
            'constraints': list([
            ]),
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'created_at': '',
            'delete': None,
            'description': '',
            'docname': 'index',
            'doctype': '.rst',
            'duration': '',
            'external_css': 'external_link',
            'external_url': None,
            'full_title': 'Requirement B 1',
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'REQ_B_1',
            'id_prefix': '',
            'is_external': False,
            'is_modified': False,
            'is_need': True,
            'is_part': False,
            'jinja_content': None,
            'layout': '',
            'links': list([
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 0,
            'params': '',
            'parent_need': '',
            'parent_needs': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'needextend dynamic functions',
            'sections': list([
              'needextend dynamic functions',
            ]),
            'service': '',
            'signature': '',
            'specific': '',
            'status': None,
            'style': None,
            'tags': list([
            ]),
            'target_id': 'REQ_B_1',
            'template': None,
            'title': 'Requirement B 1',
            'type': 'req',
            'type_name': 'Requirement',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
          'REQ_C_1': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': '',
            'constraints': list([
            ]),
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'created_at': '',
            'delete': None,
            'description': '',
            'docname': 'index',
            'doctype': '.rst',
            'duration': '',
            'external_css': 'external_link',
            'external_url': None,
            'full_title': 'Requirement C 1',
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'REQ_C_1',
            'id_prefix': '',
            'is_external': False,
            'is_modified': False,
            'is_need': True,
            'is_part': False,
            'jinja_content': None,
            'layout': '',
            'links': list([
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 0,
            'params': '',
            'parent_need': '',
            'parent_needs': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'needextend dynamic functions',
            'sections': list([
              'needextend dynamic functions',
            ]),
            'service': '',
            'signature': '',
            'specific': '',
            'status': None,
            'style': None,
            'tags': list([
            ]),
            'target_id': 'REQ_C_1',
            'template': None,
            'title': 'Requirement C 1',
            'type': 'req',
            'type_name': 'Requirement',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
          'REQ_D_1': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': '',
            'constraints': list([
            ]),
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'created_at': '',
            'delete': None,
            'description': '',
            'docname': 'index',
            'doctype': '.rst',
            'duration': '',
            'external_css': 'external_link',
            'external_url': None,
            'full_title': 'Requirement D 1',
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'REQ_D_1',
            'id_prefix': '',
            'is_external': False,
            'is_modified': False,
            'is_need': True,
            'is_part': False,
            'jinja_content': None,
            'layout': '',
            'links': list([
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 0,
            'params': '',
            'parent_need': '',
            'parent_needs': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'needextend dynamic functions',
            'sections': list([
              'needextend dynamic functions',
            ]),
            'service': '',
            'signature': '',
            'specific': '',
            'status': None,
            'style': None,
            'tags': list([
            ]),
            'target_id': 'REQ_D_1',
            'template': None,
            'title': 'Requirement D 1',
            'type': 'req',
            'type_name': 'Requirement',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
        }),
        'needs_amount': 5,
      }),
    }),
  })
# ---
# name: test_doc_needextend_html[test_app0]
  dict({
    'current_version': '',
    'project': 'Python',
    'versions': dict({
      '': dict({
        'filters': dict({
        }),
        'filters_amount': 0,
        'needs': dict({
          'extend_test_003': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': '',
            'constraints': list([
            ]),
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'created_at': '',
            'delete': None,
            'description': '''
              Had no outgoing links.
              Got an outgoing link ``extend_test_004``.
            ''',
            'docname': 'index',
            'doctype': '.rst',
            'duration': '',
            'external_css': 'external_link',
            'external_url': None,
            'full_title': 'needextend Example 3',
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'extend_test_003',
            'id_prefix': '',
            'is_external': False,
            'is_modified': True,
            'is_need': True,
            'is_part': False,
            'jinja_content': None,
            'layout': '',
            'links': list([
              'extend_test_004',
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 1,
            'params': '',
            'parent_need': '',
            'parent_needs': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'Need extend',
            'sections': list([
              'Need extend',
            ]),
            'service': '',
            'signature': '',
            'specific': '',
            'status': None,
            'style': None,
            'tags': list([
            ]),
            'target_id': 'extend_test_003',
            'template': None,
            'title': 'needextend Example 3',
            'type': 'story',
            'type_name': 'User Story',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
          'extend_test_004': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': '',
            'constraints': list([
            ]),
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'created_at': '',
            'delete': None,
            'description': '''
              Had no links.
              Got an incoming links ``extend_test_003`` and ``extend_test_006``.
            ''',
            'docname': 'index',
            'doctype': '.rst',
            'duration': '',
            'external_css': 'external_link',
            'external_url': None,
            'full_title': 'needextend Example 4',
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'extend_test_004',
            'id_prefix': '',
            'is_external': False,
            'is_modified': False,
            'is_need': True,
            'is_part': False,
            'jinja_content': None,
            'layout': '',
            'links': list([
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 0,
            'params': '',
            'parent_need': '',
            'parent_needs': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'Need extend',
            'sections': list([
              'Need extend',
            ]),
            'service': '',
            'signature': '',
            'specific': '',
            'status': None,
            'style': None,
            'tags': list([
            ]),
            'target_id': 'extend_test_004',
            'template': None,
            'title': 'needextend Example 4',
            'type': 'story',
            'type_name': 'User Story',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
          'extend_test_005': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': '',
            'constraints': list([
            ]),
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'created_at': '',
            'delete': None,
            'description': '''
              Had the two links: ``extend_test_003`` and ``extend_test_004``.
              Both got deleted.
            ''',
            'docname': 'index',
            'doctype': '.rst',
            'duration': '',
            'external_css': 'external_link',
            'external_url': None,
            'full_title': 'needextend Example 5',
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'extend_test_005',
            'id_prefix': '',
            'is_external': False,
            'is_modified': True,
            'is_need': True,
            'is_part': False,
            'jinja_content': None,
            'layout': '',
            'links': list([
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 1,
            'params': '',
            'parent_need': '',
            'parent_needs': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'Need extend',
            'sections': list([
              'Need extend',
            ]),
            'service': '',
            'signature': '',
            'specific': '',
            'status': None,
            'style': None,
            'tags': list([
            ]),
            'target_id': 'extend_test_005',
            'template': None,
            'title': 'needextend Example 5',
            'type': 'story',
            'type_name': 'User Story',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
          'extend_test_006': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': '',
            'constraints': list([
            ]),
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'created_at': '',
            'delete': None,
            'description': 'Had the link ``extend_test_003``, got another one ``extend_test_004``.',
            'docname': 'index',
            'doctype': '.rst',
            'duration': '',
            'external_css': 'external_link',
            'external_url': None,
            'full_title': 'needextend Example 6',
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'extend_test_006',
            'id_prefix': '',
            'is_external': False,
            'is_modified': True,
            'is_need': True,
            'is_part': False,
            'jinja_content': None,
            'layout': '',
            'links': list([
              'extend_test_003',
              'extend_test_004',
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 2,
            'params': '',
            'parent_need': '',
            'parent_needs': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'Need extend',
            'sections': list([
              'Need extend',
            ]),
            'service': '',
            'signature': '',
            'specific': '',
            'status': None,
            'style': None,
            'tags': list([
            ]),
            'target_id': 'extend_test_006',
            'template': None,
            'title': 'needextend Example 6',
            'type': 'story',
            'type_name': 'User Story',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
          'extend_test_007': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': '',
            'constraints': list([
            ]),
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'created_at': '',
            'delete': None,
            'description': '',
            'docname': 'index',
            'doctype': '.rst',
            'duration': '',
            'external_css': 'external_link',
            'external_url': None,
            'full_title': 'needextend Example 7',
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'extend_test_007',
            'id_prefix': '',
            'is_external': False,
            'is_modified': True,
            'is_need': True,
            'is_part': False,
            'jinja_content': None,
            'layout': '',
            'links': list([
              'extend_test_003',
              'extend_test_004',
              'extend_test_005',
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 1,
            'params': '',
            'parent_need': '',
            'parent_needs': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'Need extend',
            'sections': list([
              'Need extend',
            ]),
            'service': '',
            'signature': '',
            'specific': '',
            'status': None,
            'style': None,
            'tags': list([
            ]),
            'target_id': 'extend_test_007',
            'template': None,
            'title': 'needextend Example 7',
            'type': 'story',
            'type_name': 'User Story',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
          'extend_test_page': dict({
            'arch': dict({
            }),
            'avatar': '',
            'closed_at': '',
            'completion': '',
            'constraints': list([
            ]),
            'constraints_passed': True,
            'constraints_results': dict({
            }),
            'created_at': '',
            'delete': None,
            'description': '',
            'docname': 'page_1',
            'doctype': '.rst',
            'duration': '',
            'external_css': 'external_link',
            'external_url': None,
            'full_title': 'needextend different pages test',
            'has_dead_links': False,
            'has_forbidden_dead_links': False,
            'id': 'extend_test_page',
            'id_prefix': '',
            'is_external': False,
            'is_modified': True,
            'is_need': True,
            'is_part': False,
            'jinja_content': None,
            'layout': '',
            'links': list([
            ]),
            'max_amount': '',
            'max_content_lines': '',
            'modifications': 2,
            'params': '',
            'parent_need': '',
            'parent_needs': list([
            ]),
            'parts': dict({
            }),
            'post_template': None,
            'pre_template': None,
            'prefix': '',
            'query': '',
            'section_name': 'need objects',
            'sections': list([
              'need objects',
            ]),
            'service': '',
            'signature': '',
            'specific': '',
            'status': 'closed',
            'style': None,
            'tags': list([
              'tag_1',
              'new_tag',
              'another_tag',
            ]),
            'target_id': 'extend_test_page',
            'template': None,
            'title': 'needextend different pages test',
            'type': 'story',
            'type_name': 'User Story',
            'updated_at': '',
            'url': '',
            'url_postfix': '',
            'user': '',
          }),
        }),
        'needs_amount': 6,
      }),
    }),
  })
# ---
